[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextus"
version = "0.1.0"
description = "Ambient context weaving for knowledge workers"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "hallucinaut", email = "devops@example.com"}
]
keywords = ["context", "ambient", "workflow", "productivity", "knowledge-graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "watchdog>=4.0.0",
    "aiosqlite>=0.19.0",
    "psutil>=5.9.0",
    "anyio>=4.0.0",
    "rich>=13.0.0",
]

[project.scripts]
contextus = "contextus.daemon:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["synapse"]
